<resources>
    <string name="app_name">ReservaTuSala</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login">LOGIN</string>

    <string name="dogs">PERROS</string>
    <string name="cats">GATOS</string>
    <string name="fishes">PECES</string>
    <string name="question1">Que tipo de animales te gustan?</string>

    <string name="question2">Te gusta comerlos?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="sometimes">A VECES</string>

    <!-- FACEBOOOK API -->
    <string name="facebook_app_id">1703739646552556</string>
    <string name="facebook_app_authorities">com.facebook.app.FacebookContentProvider1703739646552556</string>
</resources>
